Add endpoint to return array of integers
